[package]
name = "count_kmer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bio = "0.42.0"   # For FASTA handling
rayon = "1.7.0"  # For parallel processing
rust-htslib = "0.42"
csv = "1.2"
indexmap = "1.9"